--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -33,102 +33,102 @@
 
 {% block body %}
 <h2 class="mt-4">User Management Page</h2>
-<div class="row">
-    <div class="col-10">
-        {% if search %}
-        <div class="row mt-4 mb-4">
-            <div class="col-6">
-                <div class="ui-widget">
-                    <input id="userSearch" placeholder="Search User" class="form-control">
-                </div>
-            </div>
-            <div class="col-4 ml-auto">
-                <button class="btn btn-outline-success" onclick="syncDb()">
-                    <i class="fa fa-refresh mx-1" aria-hidden="true"></i>
-                    Ocpasswd Synchronise
-                </button>
-            </div>
-        </div>
-        {% endif %}
-        <table class="table table-striped table-dark">
-            <thead>
-                <tr class="text-center">
-                    <th scope="col">Create At</th>
-                    <th scope="col">Ocserv Username</th>
-                    <th scope="col">Ocserv Password</th>
-                    <th scope="col">Expire Date</th>
-                    <th scope="col">Active</th>
-                    <th scope="col">Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in object_list %}
-                <tr class="text-center">
-                    <td scope="row">{{ user.create | date:'Y-m-d' }}</td>
-                    <td>{{ user.oc_username }}</td>
-                    <td>{{ user.oc_password }}</td>
-                    <td>{{ user.expire_date | date:'Y-m-d' }}</td>
-                    <td>{{ user.oc_active }}</td>
-                    <td>
-                        {% if user.oc_active %}
-                        <button class="btn btn-outline-warning btn-sm mx-1"
-                            onclick="userHandler('{{ user.id }}', 'deactive')" id="deactive-{{ user.id }}">
-                            Deactive
-                        </button>
-                        {% else %}
-                        <button class="btn btn-outline-info btn-sm  mx-1"
-                            onclick="userHandler('{{ user.id }}', 'active')" id="active-{{ user.id }}">
-                            Active
-                        </button>
-                        {% endif %}
-                        <button class="btn btn-outline-danger btn-sm" onclick="deleteUser('{{ user.id }}')"
-                            id="del-{{ user.id }}">Delete</button>
-                        <button class="btn btn-outline-danger btn-sm" style="display: none;"
-                            onclick="confirmDelete('{{ user.id }}')" id="confirm-{{ user.id }}">Delete</button>
-                        <button class="btn btn-outline-light btn-sm mx-1" style="display: none;"
-                            onclick="cancelDelete('{{ user.id }}')" id="cancel-{{ user.id }}">Cancel</button>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        {% if page_obj.has_next or page_obj.has_previous %}
-        <nav aria-label="Page navigation bg-dark" class="mt-5 mb-5">
-            <ul class="pagination justify-content-center">
-                {% if page_obj.has_previous and page_obj.paginator.num_pages > 5 %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-                </li>
-                {% endif %}
-                {% for i in page_obj.paginator.page_range %}
-                {% if page_obj.number == i %}
-                <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %} <li class="page-item">
-                    <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                    </li>
-                    {% endif %}
-                    {% endfor %}
-                    {% if page_obj.has_next and page_obj.paginator.num_pages > 5 %}
-                    <li class="page-item">
-                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    </li>
-                    {% endif %}
-            </ul>
-        </nav>
-        {% endif %}
 
-        {% if not search %}
-        <div class="text-center mt-3">
-            <button onclick="window.location.href='/';" class="btn btn-outline-success btn-lg mx-3">Home</button>
-            <button onclick="window.history.back();" class="btn btn-outline-light btn-lg">back</button>
+{% if search %}
+
+<div class="py-2" style="border: 2px solid black;">
+    <h5 class="mx-3">Online Users</h5>
+    <span id="online_users" class="mx-4 text-primary text-justify">
+    </span>
+</div>
+
+<div class="row mt-4 mb-4">
+    <div class="col-4">
+        <div class="ui-widget">
+            <input id="userSearch" placeholder="Search User" class="form-control">
         </div>
-        {% endif %}
     </div>
-    <div class="col-2 py-2 text-center overflow-scroll" style="border: 2px solid black;">
-        <h4 class="text-center mt-4">Online Users</h4>
-        <span id="online_users"></span>
+    <div class="col-8 text-right">
+        <button class="btn btn-outline-success" onclick="syncDb()">
+            <i class="fa fa-refresh mx-1" aria-hidden="true"></i>
+            Ocpasswd Synchronise
+        </button>
     </div>
 </div>
+{% endif %}
+<table class="table table-striped table-dark">
+    <thead>
+        <tr class="text-center">
+            <th scope="col">Create At</th>
+            <th scope="col">Ocserv Username</th>
+            <th scope="col">Ocserv Password</th>
+            <th scope="col">Expire Date</th>
+            <th scope="col">Active</th>
+            <th scope="col">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for user in object_list %}
+        <tr class="text-center">
+            <td scope="row">{{ user.create | date:'Y-m-d' }}</td>
+            <td>{{ user.oc_username }}</td>
+            <td>{{ user.oc_password }}</td>
+            <td>{{ user.expire_date | date:'Y-m-d' }}</td>
+            <td>{{ user.oc_active }}</td>
+            <td>
+                {% if user.oc_active %}
+                <button class="btn btn-outline-warning btn-sm mx-1" onclick="userHandler('{{ user.id }}', 'deactive')"
+                    id="deactive-{{ user.id }}">
+                    Deactive
+                </button>
+                {% else %}
+                <button class="btn btn-outline-info btn-sm  mx-1" onclick="userHandler('{{ user.id }}', 'active')"
+                    id="active-{{ user.id }}">
+                    Active
+                </button>
+                {% endif %}
+                <button class="btn btn-outline-danger btn-sm" onclick="deleteUser('{{ user.id }}')"
+                    id="del-{{ user.id }}">Delete</button>
+                <button class="btn btn-outline-danger btn-sm" style="display: none;"
+                    onclick="confirmDelete('{{ user.id }}')" id="confirm-{{ user.id }}">Delete</button>
+                <button class="btn btn-outline-light btn-sm mx-1" style="display: none;"
+                    onclick="cancelDelete('{{ user.id }}')" id="cancel-{{ user.id }}">Cancel</button>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% if page_obj.has_next or page_obj.has_previous %}
+<nav aria-label="Page navigation bg-dark" class="mt-5 mb-5">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous and page_obj.paginator.num_pages > 5 %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        </li>
+        {% endif %}
+        {% for i in page_obj.paginator.page_range %}
+        {% if page_obj.number == i %}
+        <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+        {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %} <li class="page-item">
+            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+            </li>
+            {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next and page_obj.paginator.num_pages > 5 %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+            </li>
+            {% endif %}
+    </ul>
+</nav>
+{% endif %}
+
+{% if not search %}
+<div class="text-center mt-3">
+    <button onclick="window.location.href='/';" class="btn btn-outline-success btn-lg mx-3">Home</button>
+    <button onclick="window.history.back();" class="btn btn-outline-light btn-lg">back</button>
+</div>
+{% endif %}
 
 <script>
     function deleteUser(userId) {
@@ -193,7 +193,7 @@
                 let userSpan = $("#online_users")
                 userSpan.html("")
                 for (var name of response) {
-                    userSpan.append('<blockquote class="text-success">' + name + "</blockquote>")
+                    userSpan.append(" #" + name)
                 }
             },
         });
@@ -203,7 +203,7 @@
         getOnlineUsers()
     }, 120000);
 
-    $(document).ready(()=>{
+    $(document).ready(() => {
         getOnlineUsers()
     })
 
